fixed text break in phone no field

--- a/src/components/ProductDetails/ProductDetails.css
+++ b/src/components/ProductDetails/ProductDetails.css
@@ -330,14 +330,14 @@
 }
 .product-details-content {
   /* margin-top: 80px; */
-  padding: 20px;
+  /* padding: 20px; */
   background-color: rgba(255, 255, 255, 0.8);
   max-height: calc(100vh - 80px);
 }
 .product-details-image {
-  width: 80%;
+  /* width: 80%;
   margin: 0 auto;
-  display: block;
+  display: block; */
 }
 
 /* feedbaack stars */
